syntax = "proto3";

package org.apache.jackrabbit.oak.remote;

option java_package = "org.apache.jackrabbit.oak.remote.proto";
option java_outer_classname = "NodeStateDiffProtos";

import "node_state.proto";
import "node_value.proto";

message NodeStateDiff {
    repeated NodeStateDiffEvent events = 1;
}

message NodeStateDiffEvent {
    oneof eventValue {
        PropertyAdded propertyAdded = 1;
        PropertyChanged propertyChanged = 2;
        PropertyDeleted propertyDeleted = 3;
        NodeAdded nodeAdded = 4;
        NodeChanged nodeChanged = 5;
        NodeDeleted nodeDeleted = 6;
    }
}

message PropertyAdded {
    Property after = 1;
}

message PropertyChanged {
    Property before = 1;
    Property after = 2;
}

message PropertyDeleted {
    Property before = 1;
}

message NodeAdded {
    string name = 1;
    NodeStateId after = 2;
}

message NodeChanged {
    string name = 1;
    NodeStateId before = 2;
    NodeStateId after = 3;
}

message NodeDeleted {
    string name = 1;
    NodeStateId before = 2;
}

